# omocha

./: .collada-ghci  .gitignore  .gitmodules  .hlint.yaml  A.glb  LICENSE  Main.hs  blockhuman.glb  c.json  cabal.project  cabal.project.freeze  group.json  house.dae  house.json  human15.dae  iw.prof  map.json  map2.json  map3.json  monkey.gltf  naked.glb  omocha.EXE.prof  omocha.cabal  output-children  output-sources  output-vert  output-vin  package.yaml  stack.yaml  te.glb  tree.json  untitled.dae  untitled.glb  yuki.glb
src/: Main.hs
src/Data/: Nat.hs
src/Data/BoundingBox/: V2.hs
src/Omocha/: Bitmap.hs  Class.hs  Collada.hs  ColladaTestData.hs  Context.hs  Control.hs  Font.hs  Game.hs  Gltf.hs  Main.hs  Map.hs  MapFile.hs  Mesh.hs  Resource.hs  Scene.hs  Shader.hs  Shape.hs  Spline.hs  Text.hs  Types.hs  Uniform.hs  UserInput.hs  Utils.hs  collada.ghci
src/Omocha/Data/: AABB.hs
src/Omocha/Internal/: Finalizer.hs
static/maps/: house.json  tree.json
static/maps/group1/: group.json  map.json  map0.json  map1.json  map3.json  map4.json
static/maps/group2/: group.json  map1.json  map2.json
static/maps/group3/: map.json
test/Data/BoundingBox/: V2Spec.hs
test/Omocha/: ColladaSpec.hs  ColladaTestData.hs  GameSpec.hs  MapFileSpec.hs  ShapeSpec.hs  SplineSpec.hs
