cabal-version: 3.0

name:           omocha
version:        0.0.0.0
synopsis:       Initial project template from stack
description:    Please see README.md
category:       Game
homepage:       http://github.com/name/project
author:         gg
maintainer:     ggkuron@gmail.com
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
data-files:
    ./static/images/*.png

library
  exposed-modules:
      Omocha.Game
      Omocha.MapFile
  other-modules:
      Omocha.Control
      Omocha.Text
      Omocha.Uniform
      Omocha.Context
      Omocha.Resource
      Omocha.Bitmap 
      Omocha.Font 
      Omocha.Scene 
      Omocha.Shader
      Paths_omocha
      Omocha.UserInput
  hs-source-dirs:
      src
  default-extensions:
      Strict,
      StrictData,
      ImportQualifiedPost,
      NoImplicitPrelude,
      OverloadedStrings,
      NoFieldSelectors,
      DuplicateRecordFields,
      OverloadedRecordDot, 
      MultiWayIf
  ghc-options: -fprint-potential-instances -Wall -Wno-name-shadowing
  build-depends:
      GPipe,
      GPipe-GLFW,
      JuicyPixels,
      JuicyPixels-util,
      array,
      base >=4.9.1.0,
      boundingboxes,
      containers,
      directory,
      either,
      exception-transformers,
      filepath,
      freetype2 ^>=0.1,
      gltf-loader,
      lens,
      linear,
      mtl >=2.2,
      random,
      rio,
      template-haskell,
      transformers,
      vector,
      resourcet,
      free,
      elerea,
      aeson,
      bytestring
  default-language: Haskell2010

executable omocha
  main-is: Main.hs
  other-modules:
      Paths_omocha
  hs-source-dirs:
      ./
  default-extensions:
      Strict StrictData ImportQualifiedPost NoImplicitPrelude OverloadedStrings NoFieldSelectors DuplicateRecordFields OverloadedRecordDot
  ghc-options: -fprint-potential-instances -Wall
  build-depends:
    omocha,
    base,
    freetype2 ^>=0.1,
    template-haskell
  default-language: Haskell2010

test-suite omocha-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      GameSpec
      MapFileSpec
      Paths_omocha
  hs-source-dirs:
      test/Omocha
  default-extensions:
      Strict StrictData ImportQualifiedPost NoImplicitPrelude OverloadedStrings NoFieldSelectors DuplicateRecordFields OverloadedRecordDot
  build-depends:
      base >=4.9.1.0,
      hspec,
      omocha,
      boundingboxes,
      linear,
      vector,
      QuickCheck,
      raw-strings-qq,
      aeson
  default-language: Haskell2010
