cabal-version: 3.0
name:          omocha
version:       0.0.0.0
synopsis:      Initial project template from stack
description:   Please see README.md
category:      Game
homepage:      http://github.com/name/project
author:        gg
maintainer:    ggkuron@gmail.com
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
data-files:    ./static/images/*.png
tested-with:   GHC ==9.2.8 || ==9.4.8

common shared-properties
  default-language:   GHC2021
  build-depends:
    , aeson
    , array
    , base                    >=4.9.1.0
    , boundingboxes
    , bytestring
    , containers
    , directory
    , either
    , elerea
    , exception-transformers
    , extra
    , filepath
    , free
    , freetype2               ^>=0.1
    , gltf-loader
    , GPipe
    , GPipe-GLFW
    , JuicyPixels
    , JuicyPixels-util
    , lens
    , linear
    , mtl                     >=2.2
    , random
    , resourcet
    , rio
    , template-haskell
    , transformers
    , vector

  default-extensions:
    DuplicateRecordFields
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    Strict
    StrictData

  ghc-options:
    -fprint-potential-instances -Wall -Wno-name-shadowing
    -Wno-unrecognised-pragmas

library
  import:          shared-properties
  exposed-modules:
    Omocha.Game
    Omocha.MapFile
    Omocha.Spline

  other-modules:
    Omocha.Bitmap
    Omocha.Context
    Omocha.Control
    Omocha.Font
    Omocha.Mesh
    Omocha.Resource
    Omocha.Scene
    Omocha.Shader
    Omocha.Shape
    Omocha.Text
    Omocha.Uniform
    Omocha.UserInput
    Paths_omocha

  hs-source-dirs:  src

executable omocha
  main-is:          Main.hs
  other-modules:    Paths_omocha
  hs-source-dirs:   ./
  build-depends:
    , base
    , freetype2         ^>=0.1
    , omocha
    , template-haskell

  default-language: GHC2021

test-suite omocha-test
  import:           shared-properties
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    GameSpec
    MapFileSpec
    Paths_omocha

  hs-source-dirs:   test/Omocha
  build-depends:
    , hspec
    , omocha
    , QuickCheck
    , raw-strings-qq

  default-language: GHC2021
